--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <canvas id = "myCanvas" width="1024" height="874"></canvas>
+    <script src="index.js"></script>
     
 </body>
 </html>
