--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
+    <button id="start"> Start Game </button>
     <canvas id = "myCanvas" width="1024" height="874"></canvas>
     <script src="index.js"></script>
     
