--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 </head>
 
 <body>
-    <div id="splashScreen">
+    <div id="splashScreen" class="screen">
         <section class="text">
             <h1> Mad bike</h1>
             <h3> </h3>
             <p></p>
         </section>
-        <button id="start"> Start Game </button>
+        <button id="start" class="button"> Start Game </button>
     </div>
-    <div id="gameOverScreen">
-        <section>
-            <p> GAME OVER! </p>
+    <div id="gameOverScreen" class="screen">
+        <section class="text">
+            <h1> GAME OVER! </h1>
+            <h2> Your score is: <span id="score"> 0 </span></h2>
         </section>
+        <button id="restart" class="button"> Restart Game </button>
     </div>
     <canvas id="myCanvas" width="1024" height="874"></canvas>
     <script src="index.js"></script>
