Css path edited

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/style.css" />
+    <title>Mad bike</title>
+    <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
@@ -28,8 +28,5 @@
     <script src="index.js"></script>
 
 </body>
-
 </html>
 
-<!-- ctx.drawImage(bike, 750, 620)
-    ctx.drawImage(person, 20, 600) -->
